fix: Concept list icon spacing

--- a/src/renderer/home/styles.scss
+++ b/src/renderer/home/styles.scss
@@ -470,7 +470,13 @@ html, body, #app {
       overflow: hidden;
       text-overflow: ellipsis;
       display: inline-block;
+      margin-left: .5rem;
       margin-right: .5rem;
+    }
+
+    .itemMarkerRight {
+      margin-left: 1rem;
+      margin-right: 1rem;
     }
   }
 }
